--- a/index.html
+++ b/index.html
@@ -25,20 +25,30 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/Soufraz/autocomplete-custom/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/Soufraz/autocomplete-custom/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/Soufraz/autocomplete-custom" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/Soufraz/autocomplete-custom" id="view-on-github" class="button"><span>Ver no GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Seja bem vindo.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Este plugin surgiu com a necessidade de implementar um autocomplete customizado em um site. Com ele você pode pegar informações fornecidas em json em uma determinada url ou gerar o json em seu proprio site passando a string json como parametro.</p>
+<br>
+<p>No seu arquivo html:</p>
+<pre><code>
+<div id="buscaTopo">
+    <input type="text" name="term" placeholder="Procurar amigos..." value="" />
+</div>
+</code></pre>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>Na tag script:</p>
+<pre><code>
+$( "#buscaTopo" ).autocomplete({
+  acao: 'buscaUsuariosTopo',
+  urlToGetData: '/sources/php/funcoes-ajax.php'
+});
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
