Alteração em arquivo teste

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Seja bem vindo.</h3>
 
-<p>Este plugin surgiu com a necessidade de implementar um autocomplete customizado em um site. Com ele você pode pegar informações fornecidas em json em uma determinada url ou gerar o json em seu proprio site passando a string json como parametro.</p>
+<p>Este plugin surgiu com a necessidade de implementar um autocomplete customizado em um site. Com ele você pode pegar informações fornecidas em json em uma determinada url ou gerar o json em seu proprio site e passa-la como parametro.</p>
 <br>
 <p>No seu arquivo html:</p>
 <pre><code>
-<div id="buscaTopo">
-    <input type="text" name="term" placeholder="Procurar amigos..." value="" />
-</div>
+<\div id="buscaTopo">
+    <\input type="text" name="term" placeholder="Procurar amigos..." value="" />
+<\/div>
 </code></pre>
 
 <p>Na tag script:</p>
