--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
           <h3>
             <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
             <span class="octicon octicon-link"></span></a>
-            Seja bem vindo!
+            Welcome!
           </h3>
 
-<p>Este plugin surgiu com a necessidade de implementar um autocomplete customizado em um site. Com ele você pode pegar informações fornecidas em json em uma determinada url ou gerar o json em seu proprio site e passa-lo como parametro.</p>
+<p>This plugin came with the need to implement a custom autocomplete on a website. With it you can pick up information provided in json in a given url or json generate on your own site and passes it as a parameter.</p>
 
 
 <h3>
   <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
   <span class="octicon octicon-link"></span></a>
-  Exemplo
+  Example
 </h3>
 <div id="buscaTeste">
-    <input type="text" name="term" placeholder="Digite alguma coisa..." value="" />
+    <input type="text" name="term" placeholder="Tape something..." value="" />
 </div>
 
 <br><br>
@@ -77,23 +77,23 @@
   How to use (basic way)
 </h3>
 
-<p><strong>* Dependências:</strong> JQuery (de preferência a última versão)</p>
+<p><strong>* Dependencies:</strong> JQuery (preferably the latest version)</p>
 
 <p>No seu arquivo html:</p>
 <pre><code class="language-markup">&lt;div id="buscaTopo">
-    &lt;input type="text" name="term" placeholder="Procurar amigos..." value="" />
+    &lt;input type="text" name="term" placeholder="Find friends..." value="" />
 &lt;/div>
 </code></pre>
 
 <br>
 <p>Na tag script:</p>
 <pre><code class="language-css">$( "#buscaTopo" ).autocomplete({
-  //Em breve documentação explicando como explorar melhor os parametros
+  //Soon documentation explaining how best to exploit the parameters
 });
 </code></pre>
 
 <br>
-<p>E não esqueça de adicionar os arquivos da biblioteca em sua página:</p>
+<p>And do not forget to add the library files into your page:</p>
 <pre><code class="language-css">&lt;script src="js/autocomplete-custom.js" /></script>
 &lt;link rel="stylesheet" href="css/autocomplete-custom.css" />
 </code></pre>
@@ -102,19 +102,19 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors">
   <span class="octicon octicon-link"></span>
-</a>Autores e colaboradores
+</a>Authors and Contributors
 </h3>
 
 <p>
 <a href="http://lmgtfy.com/?q=Rafael+Soufraz" target="blank">@RafaelSoufraz</a>
-<br>Quer contribuir para o projeto? Fique a vontade! Estou apenas no começo e preciso de ajuda. :)<br>  
-Me envie um e-mail e iremos conversar. <strong>contato@rafaelfrazao.com.br</strong></p>
+<br>Want to contribute to the project? Feel free! I am just beginning and I need help. :)<br>  
+Send me an email and we will talk. <strong>contato@rafaelfrazao.com.br</strong></p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Encontrou algum erro? Por favor me notifique. <strong>contato@rafaelfrazao.com.br</strong>
-<br>Serei estremamente grato.</p>
+<p>Found a bug? Please notify me. <strong>contato@rafaelfrazao.com.br</strong>
+<br>I will be extremely grateful.</p>
 </section>
 
         <footer>
