--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
 <p><strong>* Dependencies:</strong> JQuery (preferably the latest version)</p>
 
-<p>No seu arquivo html:</p>
+<p>In your file html:</p>
 <pre><code class="language-markup">&lt;div id="buscaTopo">
     &lt;input type="text" name="term" placeholder="Find friends..." value="" />
 &lt;/div>
 </code></pre>
 
 <br>
-<p>Na tag script:</p>
+<p>On the tag script:</p>
 <pre><code class="language-css">$( "#buscaTopo" ).autocomplete({
   //Soon documentation explaining how best to exploit the parameters
 });
